--- a/style.css
+++ b/style.css
@@ -4,3 +4,38 @@ img {
     border-style: ridge;
     border-width: 15px;
 }
+
+#footer {
+    width: 100%;
+    height: 30px;
+    position: fixed;
+    bottom: 0;
+    background-color: white;
+    left: 0;
+    color: black;
+    font-family: 'Cinzel Decorative', cursive;
+}
+
+img:hover {
+    border-radius: 50px;
+    width: 465px;
+    height: 315px;
+}
+
+body {
+    background-color: #c8c9c8;
+}
+
+h1 {
+    font-family: 'Rubik Iso', cursive;
+}
+
+#camera {
+    border: dashed black;
+    width: 400;
+    height: 300;
+}
+
+#textbox {
+    width: 25%;
+}
